Another try using jackson to have complete control of the serialization